Added initial structure for website

--- a/day-03-css-var-with-js/index.html
+++ b/day-03-css-var-with-js/index.html
@@ -6,9 +6,12 @@
     <title>Day 3 | Css Var with Js</title>
     <link rel="stylesheet" href="../tailwind-setup/output.css">
 </head>
-<body>
-
+<body >
+ <main class="bg-slate-900 h-screen w-full">
+    
+ </main>
     
 <script src="script.js"></script>
 </body>
 </html>
+
