Updated index.html with  structure and style

--- a/day-04-flex-Panel/index.html
+++ b/day-04-flex-Panel/index.html
@@ -232,31 +232,6 @@
       </div>
     </main>
 
-    <script>
-      const panels = document.querySelectorAll(".panel");
-
-      function toggleOpen() {
-        // Close all other panels first
-        panels.forEach((panel) => {
-          if (panel !== this) {
-            panel.classList.remove("open", "open-active");
-          }
-        });
-
-        // Toggle current panel
-        this.classList.toggle("open");
-
-        // Handle transition end only once
-        this.addEventListener("transitionend", function handler(e) {
-          if (e.propertyName.includes("flex")) {
-            this.classList.toggle("open-active");
-            this.removeEventListener("transitionend", handler);
-          }
-        });
-      }
-
-      // Attach only click listeners
-      panels.forEach((panel) => panel.addEventListener("click", toggleOpen));
-    </script>
+    <script src="script.js"> </script>
   </body>
 </html>
