--- a/day-05-City-Scout/index.html
+++ b/day-05-City-Scout/index.html
@@ -17,7 +17,7 @@
 
  
 
-    <div class="w-105 relative z-20">
+    <div class="w-full max-w-md relative z-20 px-4">
       <!-- INPUT -->
       <input
   id="searchInput"
